--- a/website/src/styles.css
+++ b/website/src/styles.css
@@ -506,6 +506,7 @@ section {
 
 #header.nav-solid [class*='col-'] {
   padding: 0 20px;
+  margin-top: 10px;
 }
 
 #header.nav-solid {
@@ -1395,21 +1396,21 @@ blockquote {
   padding: 15px 25px;
 }
 
-.client-overlay {
-  background: rgba(0, 0, 0, 0.8);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
+/*.client-overlay {*/
+/*  background: rgba(0, 0, 0, 0.8);*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  right: 0;*/
+/*  bottom: 0;*/
+/*  left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  opacity: 0;*/
+/*  -webkit-transition: all 0.3s ease-out;*/
+/*  -moz-transition: all 0.3s ease-out;*/
+/*  -o-transition: all 0.3s ease-out;*/
+/*  transition: all 0.3s ease-out;*/
+/*}*/
 
 #clients a:hover .client-overlay {
   opacity: 1;
