--- a/website/src/app/clients/clients.component.html
+++ b/website/src/app/clients/clients.component.html
@@ -15,45 +15,13 @@
 
     </div>
 
-    <div class="col-2-3">
+    <div class="col-2-3" >
 
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo1.png" alt="Company"/>
-        <div class="client-overlay"><span>Tree</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo2.png" alt="Company"/>
-        <div class="client-overlay"><span>Fingerprint</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo3.png" alt="Company"/>
-        <div class="client-overlay"><span>The Man</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo4.png" alt="Company"/>
-        <div class="client-overlay"><span>Mustache</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo5.png" alt="Company"/>
-        <div class="client-overlay"><span>Goat</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo6.png" alt="Company"/>
-        <div class="client-overlay"><span>Justice</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo7.png" alt="Company"/>
-        <div class="client-overlay"><span>Ball</span></div>
-      </a>
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo8.png" alt="Company"/>
-        <div class="client-overlay"><span>Cold</span></div>
+      <a href="{{company.weblink}}" class="col-3" *ngFor="let company of clients.companies">
+        <img src="../assets/images/company-images/{{company.logo}}" alt="Company"/>
+        <div class="client-overlay"><span>{{company.name}}</span></div>
       </a>
 
-      <a href="#" class="col-3">
-        <img src="../assets/images/company-images/company-logo9.png" alt="Company"/>
-        <div class="client-overlay"><span>Cold</span></div>
-      </a>
 
     </div>
 
